--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "APP",
   "version": "0.0.1",
   "description": "React skeleton app",
-  "author": "Václav Daněk & DevX",
+  "author": "Václav Daněk",
   "license": "MIT",
   "private": true,
   "main": "''",
@@ -22,7 +22,6 @@
     "loaders.css": "^0.1.2",
     "moment": "^2.22.1",
     "node-sass": "^4.9.0",
-    "rc-tooltip": "^4.0.0-alpha.3",
     "react": "17.0.0",
     "react-device-detect": "1.17.0",
     "react-dom": "17.0.0",
@@ -31,6 +30,7 @@
     "react-redux": "^5.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-tooltip": "^4.2.21",
     "reactstrap": "^8.1.1",
     "redux": "^3.7.2",
     "redux-observable": "^0.14.1",
@@ -42,19 +42,25 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-flow": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-flow": "^7.10.4",
-    "@babel/register": "^7.10.5",
-    "@babel/runtime": "^7.10.5",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-loader": "^7.1.2",
     "css-loader": "0.26.1",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
