--- a/package.json
+++ b/package.json
@@ -7,39 +7,39 @@
   "private": true,
   "main": "''",
   "scripts": {
-    "build": "webpack --config webpack.production.config.js --progress --profile --colors",
-    "start": "webpack-dev-server --progress --profile --colors",
+    "build": "webpack --config webpack.production.config.js --progress --profile",
+    "start": "webpack-dev-server --progress --profile",
     "lint": "eslint --ext js --ext jsx src || exit 0",
-    "dev": "webpack-dashboard -- webpack-dev-server --progress --profile --colors",
+    "dev": "webpack-dashboard -- webpack-dev-server --progress --profile",
     "test": "jest",
     "watch": "jest --watch"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.2",
     "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "font-awesome": "^4.7.0",
-    "i18n-react": "^0.6.4",
+    "i18n-react": "^0.7.0",
     "loaders.css": "^0.1.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.22.1",
-    "node-sass": "^4.9.0",
-    "react": "17.0.0",
-    "react-device-detect": "1.17.0",
-    "react-dom": "17.0.0",
-    "react-icons": "^2.2.7",
+    "node-sass": "^7.0.3",
+    "react": "18.2.0",
+    "react-device-detect": "2.2.2",
+    "react-dom": "18.2.0",
     "react-loaders": "^3.0.1",
-    "react-redux": "^5.1.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-tooltip": "^4.2.21",
-    "reactstrap": "^8.1.1",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.14.1",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^5.3.3",
+    "reactstrap": "^9.1.4",
+    "redbox-react": "^1.6.0",
+    "redux": "^4.2.0",
+    "redux-observable": "^2.0.0",
     "redux-thunk": "^2.2.0",
-    "reduxsauce": "^0.7.0",
-    "rxjs": "^5.5.7",
-    "sass-loader": "^6.0.2",
-    "seamless-immutable": "^7.1.4",
-    "workbox-webpack-plugin": "^4.3.1"
+    "reduxsauce": "^1.2.1",
+    "rxjs": "^7.5.7",
+    "sass-loader": "^13.1.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -48,45 +48,44 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-flow": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.19.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.19.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^7.1.2",
-    "css-loader": "0.26.1",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "6.7.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.10.0",
-    "flow-bin": "^0.68.0",
-    "html-webpack-plugin": "^2.26.0",
-    "jest": "^26.1.0",
-    "postcss-loader": "^1.2.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.9",
+    "file-loader": "^6.2.0",
+    "flow-bin": "^0.188.2",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.0.5",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-test-renderer": "^16.1.1",
-    "style-loader": "0.13.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "0.5.7",
-    "webpack": "^3.5.5",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cleanup-plugin": "^0.4.2",
-    "webpack-dashboard": "^0.3.0",
-    "webpack-dev-server": "^2.4.1"
+    "react-hot-loader": "^4.13.0",
+    "react-test-renderer": "^18.2.0",
+    "style-loader": "3.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "4.1.1",
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dashboard": "^3.3.7",
+    "webpack-dev-server": "^4.11.1"
   }
 }
