--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.19.4",
-    "babel-core": "^7.0.0-bridge.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "css-loader": "6.7.1",
@@ -77,7 +77,7 @@
     "jest": "^29.1.2",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.0.5",
-    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "style-loader": "3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
