--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "APP",
+  "name": "react-skeleton-app",
   "version": "0.0.1",
-  "description": "React skeleton app",
+  "description": "React starter-kit project",
   "author": "Václav Daněk",
   "license": "MIT",
   "private": true,
   "main": "''",
   "scripts": {
     "build": "webpack --config webpack.production.config.js --progress --profile",
-    "start": "webpack-dev-server --progress --profile",
+    "start": "webpack-dev-server --config webpack.dev.config.js --progress --profile",
+    "dev": "webpack-dashboard -- webpack-dev-server --config webpack.dev.config.js --progress --profile",
     "lint": "eslint --ext js --ext jsx src || exit 0",
-    "dev": "webpack-dashboard -- webpack-dev-server --progress --profile",
     "test": "jest",
-    "watch": "jest --watch"
+    "watch": "jest --watch",
+    "type-check": "tsc"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.13",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.4",
+    "bootstrap": "5.2.3",
     "classnames": "^2.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "font-awesome": "^4.7.0",
     "i18n-react": "^0.7.0",
     "js-utils": "https://github.com/VaclavDanek/js-utils.git",
     "loaders.css": "^0.1.2",
-    "mini-css-extract-plugin": "^2.7.2",
     "moment": "^2.22.1",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
@@ -39,47 +42,43 @@
     "redux-thunk": "^2.4.2",
     "reduxsauce": "^1.2.1",
     "rxjs": "^7.8.0",
-    "sass-loader": "^13.2.0",
     "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
-    "@babel/eslint-parser": "^7.5.4",
-    "@babel/node": "^7.20.7",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-flow": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/eslint-parser": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.21.0",
-    "@babel/runtime": "^7.21.0",
+    "@babel/preset-typescript": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^29.4.1",
+    "@types/react-dom": "^18.0.11",
+    "@types/seamless-immutable": "^7.1.16",
+    "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "6.7.3",
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint": "^8.36.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "flow-bin": "^0.200.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
     "prettier": "^2.8.4",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
-    "style-loader": "3.3.1",
+    "sass-loader": "^13.2.2",
+    "style-loader": "3.3.2",
+    "typescript": "^5.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.8.0",
