--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.6",
-    "bootstrap": "5.2.3",
+    "bootstrap": "5.3.3",
     "classnames": "^2.2.5",
     "i18n-react": "^0.7.0",
     "js-utils": "https://github.com/VaclavDanek/js-utils.git",
     "loaders.css": "^0.1.2",
     "moment": "^2.22.1",
-    "node-sass": "^8.0.0",
-    "react": "18.2.0",
+    "node-sass": "^9.0.0",
+    "react": "18.3.1",
     "react-device-detect": "2.2.3",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-loaders": "^3.0.1",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.10.0",
     "reactstrap": "^9.1.9",
     "redbox-react": "^1.6.0",
-    "redux": "^4.2.1",
-    "redux-observable": "^2.0.0",
-    "redux-thunk": "^2.4.2",
+    "redux": "^5.0.1",
+    "redux-observable": "^3.0.0-rc.2",
+    "redux-thunk": "^3.1.0",
     "reduxsauce": "^1.2.1",
     "rxjs": "^7.8.0",
     "seamless-immutable": "^7.1.4"
@@ -56,34 +56,34 @@
     "@types/react-dom": "^18.2.1",
     "@types/seamless-immutable": "^7.1.16",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "6.7.3",
-    "eslint": "^8.39.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "7.1.2",
+    "eslint": "^9.12.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.10.3",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-testing-library": "^6.3.0",
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.4.3",
     "mini-css-extract-plugin": "^2.7.2",
-    "postcss-loader": "^7.2.4",
-    "prettier": "^2.8.8",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
-    "sass-loader": "^13.2.2",
-    "style-loader": "3.3.2",
+    "sass-loader": "^16.0.2",
+    "style-loader": "4.0.0",
     "typescript": "^5.0.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.80.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
     "webpack-dashboard": "^3.3.7",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^5.1.0"
   }
 }
